[feat] (ABC-654): added: - colored slider storybook wrapper - check for background color on slider innertick -fixed bubble z-index on vertical wrapper

--- a/src/modules/base/slider/slider.css
+++ b/src/modules/base/slider/slider.css
@@ -31,6 +31,7 @@
  */
 
 :host {
+    background-color: inherit;
     --input-thumb-radius: 8.75px;
 }
 
@@ -120,7 +121,6 @@
     opacity: 0;
     position: absolute;
     top: -50px;
-    z-index: 3;
     background-color: var(--avonni-slider-pin-color, #1a5296);
     color: #fff;
     height: 32px;
@@ -137,6 +137,7 @@
     font-size: 12px;
     line-height: 32px;
     white-space: nowrap;
+    z-index: 100;
 }
 .avonni-slider__bubble:after {
     position: absolute;
@@ -149,12 +150,12 @@
     border-top-width: 19px;
     border-top-style: solid;
     border-top-color: var(--avonni-slider-pin-color, #1a5296);
+    z-index: 100;
 }
 .avonni-slider__bubble-vertical {
     opacity: 0;
     position: absolute;
     top: 19px;
-    z-index: 3;
     background-color: var(--avonni-slider-pin-color, #1a5296);
     color: #fff;
     border-radius: 0.25rem;
@@ -170,6 +171,7 @@
     transform-origin: 17% 57%;
     transform: rotate(90deg);
     min-width: 80px;
+    z-index: 100;
 }
 .avonni-slider__bubble-vertical:after {
     position: absolute;
@@ -183,6 +185,7 @@
     border-top-style: solid;
     border-top-color: var(--avonni-slider-pin-color, #1a5296);
     transform: rotate(90deg);
+    z-index: 100;
 }
 
 .avonni-slider__label {
